--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=book_store
+#logging.level.org.springframework=DEBUG
+
+# H2 Database configuration
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:book_store_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+springdoc.swagger-ui.path: /swagger-ui.html
